bindings/c/include/elecrypto.h

/* Elecrypto - Cross-platform Cryptographic Library
 *
 * This file is auto-generated by cbindgen.
 * Do not edit manually.
 */


#ifndef ELECRYPTO_H
#define ELECRYPTO_H

#pragma once

/* Warning: This file is auto-generated. Do not edit. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * AES-256 key size in bytes
 */
#define elecrypto_AES_KEY_SIZE 32

/**
 * AES-GCM nonce size in bytes
 */
#define elecrypto_AES_NONCE_SIZE 12

/**
 * ChaCha20-Poly1305 key size in bytes
 */
#define elecrypto_CHACHA20_KEY_SIZE 32

/**
 * ChaCha20-Poly1305 nonce size in bytes
 */
#define elecrypto_CHACHA20_NONCE_SIZE 12

/**
 * Default PBKDF2 iterations (OWASP recommendation for HMAC-SHA256)
 */
#define elecrypto_DEFAULT_PBKDF2_ITERATIONS 600000

/**
 * Minimum PBKDF2 iterations
 */
#define elecrypto_MIN_PBKDF2_ITERATIONS 100000

/**
 * Default Argon2 memory cost in KiB (64 MB)
 */
#define elecrypto_DEFAULT_ARGON2_MEMORY 65536

/**
 * Default Argon2 time cost (iterations)
 */
#define elecrypto_DEFAULT_ARGON2_TIME 3

/**
 * Default Argon2 parallelism
 */
#define elecrypto_DEFAULT_ARGON2_PARALLELISM 4

/**
 * Default salt size in bytes
 */
#define elecrypto_DEFAULT_SALT_SIZE 16

/**
 * Ed25519 public key size in bytes
 */
#define elecrypto_ED25519_PUBLIC_KEY_SIZE 32

/**
 * Ed25519 private key size in bytes (seed)
 */
#define elecrypto_ED25519_PRIVATE_KEY_SIZE 32

/**
 * Ed25519 signature size in bytes
 */
#define elecrypto_ED25519_SIGNATURE_SIZE 64









/**
 * Success return code
 */
#define elecrypto_ELECRYPTO_SUCCESS 0

/**
 * Error codes (negative values)
 */
#define elecrypto_ELECRYPTO_ERROR_INVALID_INPUT -1

#define elecrypto_ELECRYPTO_ERROR_INVALID_KEY_LENGTH -2

#define elecrypto_ELECRYPTO_ERROR_INVALID_NONCE_LENGTH -3

#define elecrypto_ELECRYPTO_ERROR_AUTHENTICATION_FAILED -4

#define elecrypto_ELECRYPTO_ERROR_ENCRYPTION_FAILED -5

#define elecrypto_ELECRYPTO_ERROR_DECRYPTION_FAILED -6

#define elecrypto_ELECRYPTO_ERROR_SIGNING_FAILED -7

#define elecrypto_ELECRYPTO_ERROR_VERIFICATION_FAILED -8

#define elecrypto_ELECRYPTO_ERROR_KEY_GENERATION_FAILED -9

#define elecrypto_ELECRYPTO_ERROR_INVALID_PUBLIC_KEY -10

#define elecrypto_ELECRYPTO_ERROR_INVALID_PRIVATE_KEY -11

/**
 * AES-256-GCM key size (32 bytes)
 */
#define elecrypto_ELECRYPTO_AES_KEY_SIZE 32

/**
 * AES-GCM nonce size (12 bytes)
 */
#define elecrypto_ELECRYPTO_AES_NONCE_SIZE 12

/**
 * AES-GCM authentication tag size (16 bytes)
 */
#define elecrypto_ELECRYPTO_AES_TAG_SIZE 16

/**
 * ChaCha20-Poly1305 key size (32 bytes)
 */
#define elecrypto_ELECRYPTO_CHACHA20_KEY_SIZE 32

/**
 * ChaCha20-Poly1305 nonce size (12 bytes)
 */
#define elecrypto_ELECRYPTO_CHACHA20_NONCE_SIZE 12

/**
 * Ed25519 public key size (32 bytes)
 */
#define elecrypto_ELECRYPTO_ED25519_PUBLIC_KEY_SIZE 32

/**
 * Ed25519 secret key size (64 bytes)
 */
#define elecrypto_ELECRYPTO_ED25519_SECRET_KEY_SIZE 64

/**
 * Ed25519 signature size (64 bytes)
 */
#define elecrypto_ELECRYPTO_ED25519_SIGNATURE_SIZE 64

/**
 * Generate random bytes
 *
 * # Safety
 *
 * Caller must ensure `output` points to valid memory of at least `length` bytes.
 */
elecrypto_ int elecrypto_random_bytes(unsigned char *output, unsigned int length);

/**
 * Compute SHA-256 hash
 *
 * # Safety
 *
 * - `input` must point to valid memory of at least `input_len` bytes
 * - `output` must point to valid memory of at least 32 bytes
 */
elecrypto_
int elecrypto_sha256(const unsigned char *input,
                     unsigned int input_len,
                     unsigned char *output);

/**
 * Compute SHA-512 hash
 *
 * # Safety
 *
 * - `input` must point to valid memory of at least `input_len` bytes
 * - `output` must point to valid memory of at least 64 bytes
 */
elecrypto_
int elecrypto_sha512(const unsigned char *input,
                     unsigned int input_len,
                     unsigned char *output);

/**
 * Generate AES-256 key
 *
 * # Safety
 *
 * `output` must point to valid memory of at least 32 bytes
 */
elecrypto_ int elecrypto_aes_generate_key(unsigned char *output);

/**
 * Encrypt with AES-256-GCM
 *
 * # Safety
 *
 * - `plaintext` must point to valid memory of `plaintext_len` bytes
 * - `key` must point to valid memory of 32 bytes
 * - `nonce` must point to valid memory of 12 bytes (can be NULL to auto-generate)
 * - `ciphertext` must point to valid memory of at least `plaintext_len + 16` bytes
 * - `nonce_out` must point to valid memory of 12 bytes (receives used nonce)
 *
 * Returns number of ciphertext bytes written (plaintext_len + 16), or negative error code
 */
elecrypto_
int elecrypto_aes_gcm_encrypt(const unsigned char *plaintext,
                              unsigned int plaintext_len,
                              const unsigned char *key,
                              const unsigned char *nonce,
                              unsigned char *ciphertext,
                              unsigned char *nonce_out);

/**
 * Decrypt with AES-256-GCM
 *
 * # Safety
 *
 * - `ciphertext` must point to valid memory of `ciphertext_len` bytes (includes 16-byte tag)
 * - `key` must point to valid memory of 32 bytes
 * - `nonce` must point to valid memory of 12 bytes
 * - `plaintext` must point to valid memory of at least `ciphertext_len - 16` bytes
 *
 * Returns number of plaintext bytes written, or negative error code
 */
elecrypto_
int elecrypto_aes_gcm_decrypt(const unsigned char *ciphertext,
                              unsigned int ciphertext_len,
                              const unsigned char *key,
                              const unsigned char *nonce,
                              unsigned char *plaintext);

/**
 * Generate ChaCha20-Poly1305 key
 *
 * # Safety
 *
 * `output` must point to valid memory of at least 32 bytes
 */
elecrypto_ int elecrypto_chacha20_generate_key(unsigned char *output);

/**
 * Encrypt with ChaCha20-Poly1305
 *
 * # Safety
 *
 * Similar safety requirements to AES-GCM encrypt
 */
elecrypto_
int elecrypto_chacha20_poly1305_encrypt(const unsigned char *plaintext,
                                        unsigned int plaintext_len,
                                        const unsigned char *key,
                                        const unsigned char *nonce,
                                        unsigned char *ciphertext,
                                        unsigned char *nonce_out);

/**
 * Decrypt with ChaCha20-Poly1305
 *
 * # Safety
 *
 * Similar safety requirements to AES-GCM decrypt
 */
elecrypto_
int elecrypto_chacha20_poly1305_decrypt(const unsigned char *ciphertext,
                                        unsigned int ciphertext_len,
                                        const unsigned char *key,
                                        const unsigned char *nonce,
                                        unsigned char *plaintext);

/**
 * Compute SHA3-256 hash
 *
 * # Safety
 *
 * - `input` must point to valid memory of at least `input_len` bytes
 * - `output` must point to valid memory of at least 32 bytes
 */
elecrypto_
int elecrypto_sha3_256(const unsigned char *input,
                       unsigned int input_len,
                       unsigned char *output);

/**
 * Compute BLAKE3 hash
 *
 * # Safety
 *
 * - `input` must point to valid memory of at least `input_len` bytes
 * - `output` must point to valid memory of at least `output_len` bytes
 */
elecrypto_
int elecrypto_blake3(const unsigned char *input,
                     unsigned int input_len,
                     unsigned char *output,
                     unsigned int output_len);

/**
 * Generate Ed25519 keypair
 *
 * # Safety
 *
 * - `public_key` must point to valid memory of at least 32 bytes
 * - `secret_key` must point to valid memory of at least 64 bytes
 */
elecrypto_
int elecrypto_ed25519_generate_keypair(unsigned char *public_key,
                                       unsigned char *secret_key);

/**
 * Sign message with Ed25519
 *
 * # Safety
 *
 * - `message` must point to valid memory of `message_len` bytes
 * - `secret_key` must point to valid memory of 64 bytes
 * - `signature` must point to valid memory of at least 64 bytes
 */
elecrypto_
int elecrypto_ed25519_sign(const unsigned char *message,
                           unsigned int message_len,
                           const unsigned char *secret_key,
                           unsigned char *signature);

/**
 * Verify Ed25519 signature
 *
 * # Safety
 *
 * - `message` must point to valid memory of `message_len` bytes
 * - `signature` must point to valid memory of 64 bytes
 * - `public_key` must point to valid memory of 32 bytes
 *
 * Returns 1 if valid, 0 if invalid, negative on error
 */
elecrypto_
int elecrypto_ed25519_verify(const unsigned char *message,
                             unsigned int message_len,
                             const unsigned char *signature,
                             const unsigned char *public_key);

/**
 * PBKDF2 key derivation
 *
 * # Safety
 *
 * - `password` must point to valid memory of `password_len` bytes
 * - `salt` must point to valid memory of `salt_len` bytes
 * - `output` must point to valid memory of `output_len` bytes
 */
elecrypto_
int elecrypto_pbkdf2(const unsigned char *password,
                     unsigned int password_len,
                     const unsigned char *salt,
                     unsigned int salt_len,
                     unsigned int iterations,
                     unsigned char *output,
                     unsigned int output_len);

/**
 * Argon2id key derivation
 *
 * # Safety
 *
 * - `password` must point to valid memory of `password_len` bytes
 * - `salt` must point to valid memory of 16 bytes (can be NULL to auto-generate)
 * - `output` must point to valid memory of `output_len` bytes
 * - `salt_out` must point to valid memory of 16 bytes (receives used salt)
 */
elecrypto_
int elecrypto_argon2id(const unsigned char *password,
                       unsigned int password_len,
                       const unsigned char *salt,
                       unsigned int memory_cost,
                       unsigned int time_cost,
                       unsigned int parallelism,
                       unsigned char *output,
                       unsigned int output_len,
                       unsigned char *salt_out);

/**
 * HKDF key derivation
 *
 * # Safety
 *
 * - `input_key_material` must point to valid memory of `ikm_len` bytes
 * - `salt` can be NULL (optional)
 * - `info` can be NULL (optional)
 * - `output` must point to valid memory of `output_len` bytes
 */
elecrypto_
int elecrypto_hkdf(const unsigned char *input_key_material,
                   unsigned int ikm_len,
                   const unsigned char *salt,
                   unsigned int salt_len,
                   const unsigned char *info,
                   unsigned int info_len,
                   unsigned char *output,
                   unsigned int output_len);

#endif  /* ELECRYPTO_H */